--- a/style.css
+++ b/style.css
@@ -1,24 +1,39 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: "Balsamiq Sans", cursive;
 }
 
 .BackImg {
   width: 100%;
   height: 100%;
-  background-image: url("back1.jpg");
+  background-image: url("back2.jpg");
   background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: rgb(126, 40, 196);
+  color: silver;
 }
 
 .ProfileCard {
-  width: 300px;
+  width: 360px;
+  background-color: rgba(37, 53, 77, 0.5);
+  padding: 30px 0;
+  border-radius: 10%;
 }
 img {
   height: 250px;
   border-radius: 100%;
+}
+
+.ProfileText h1 {
+  font-size: 3em;
+  padding-top: 20px;
+  padding-bottom: 50px;
+}
+
+i {
+  color: seashell;
+  padding: 5px;
 }
