--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   font-family: "Balsamiq Sans", cursive;
 }
 
@@ -27,32 +27,12 @@
   height: 100%;
   background-image: url("back2.jpg");
   background-size: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+
   color: silver;
 }
 
-.ProfileCard {
-  width: 370px;
-  background-color: rgba(37, 53, 77, 0.8);
-  padding: 30px 0;
-  border-radius: 10%;
-}
-img {
-  height: 200px;
-  width: 200px;
-  border-radius: 100%;
-}
-
-.ProfileText h1 {
-  font-size: 3em;
-  padding-top: 20px;
-  padding-bottom: 50px;
-}
-
-i {
-  color: seashell;
-  padding: 5px;
+.body {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
