--- a/contact.css
+++ b/contact.css
@@ -4,6 +4,15 @@
   font-family: "Balsamiq Sans", cursive;
 }
 
+.page {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-image: url("back3.jpg");
+  background-size: cover;
+}
+
 nav {
   display: flex;
   justify-content: space-around;
