--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
   font-family: "Balsamiq Sans", cursive;
 }
 
+.page {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-image: url("back2.jpg");
+  background-size: cover;
+}
+
 nav {
   display: flex;
   justify-content: space-around;
@@ -104,13 +113,10 @@ nav {
   transform: rotate(45deg) translate(-5px, -6px);
 }
 
-.BackImg {
-  width: 100%;
-  height: 100%;
-  background-image: url("back2.jpg");
-  background-size: cover;
+.bodydown {
   display: flex;
   align-items: center;
+  margin-top: 90px;
   justify-content: center;
   text-align: center;
   color: silver;
