--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 .page {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   background-image: url("back2.jpg");
