--- a/contact.css
+++ b/contact.css
@@ -9,7 +9,7 @@
   height: 100%;
   justify-content: center;
   align-items: center;
-  background-image: url("back3.jpg");
+  background-color: #82C4D2;
   background-size: cover;
 }
 
@@ -18,14 +18,14 @@ nav {
   justify-content: space-around;
   align-items: center;
   min-height: 8vh;
-  background-color: rgba(37, 53, 77, 0.8);
+  background-color: rgba(111,167,180 , 1);
 }
 
 .logo {
-  color: silver;
+  color: black;
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .nav-links {
@@ -37,11 +37,16 @@ nav {
   list-style: none;
 }
 .nav-links a {
-  color: silver;
+  color: black;
   text-decoration: none;
   letter-spacing: 3px;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 17px;
+}
+
+.nav-links a:hover {
+  font-size: 19px;
+  font-weight: bold;
 }
 
 .burger {
@@ -52,7 +57,7 @@ nav {
 .burger div {
   width: 25px;
   height: 3px;
-  background-color: silver;
+  background-color: black;
   margin: 5px;
   transition: all 0.3s ease;
 }
@@ -72,7 +77,7 @@ nav {
     right: 0px;
     height: 92vh;
     top: 8vh;
-    background-color: rgba(37, 53, 77, 0.8);
+    background-color:rgba(111,167,180 , 1);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -111,4 +116,82 @@ nav {
 }
 .toggle .line3 {
   transform: rotate(45deg) translate(-5px, -6px);
+}
+
+
+
+.container{
+  width:400px;
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  margin-top: 50px;
+  box-shadow: 0 15px 35px rgba(50,50,93,.1),0 5px 15px rgba(0,0,0,.07);
+  padding:2em;
+  border-radius: 30px;
+  background-color:rgba(255, 255, 255, 0.349);
+}
+.form-group{
+  margin-bottom:1.5em;
+  transition:all .3s;
+}
+.form-label{
+  font-size:.75em;
+  color: #555;
+  display:block;
+  opacity:0;
+  transition: all .3s;
+  transform:translateX(-50px);
+}
+.form-control{
+  box-shadow:none;
+  border-radius:5px;
+  border-color:#ccc;
+  border-style:none none solid none;
+  width:100%;
+  font-size:1.25em;
+  transition:all .6s;
+}
+.form-control::placeholder{
+  color:#aaa;
+}
+.form-control:focus{
+  box-shadow:none;
+  border-color: orange;
+  outline:none;
+}
+/* .form-group:focus-within{
+  transform:scale(1.1,1.1);
+} */
+
+.form-control:invalid:focus{
+  border-color:#82C4D2;
+}
+.form-control:valid:focus{
+  border-color:#82C4D2;
+}
+
+.btn{
+  background: 0 0 #fff;
+  border:1px solid #aaa;
+  border-radius:3px;
+  color: #555;
+  font-size:1em;
+  padding:10 50px;
+  text-transform:uppercase;
+}
+.btn:hover{
+  border-color: #82C4D2;
+  color: #82C4D2;
+}
+textarea{
+  resize:none;
+}
+
+
+
+.focused > .form-label{
+  opacity:1;
+  transform:translateX(0px);
+
 }
