--- a/work.css
+++ b/work.css
@@ -9,7 +9,7 @@
   height: 100%;
   justify-content: center;
   align-items: center;
-  background-image: url("back3.jpg");
+  background-color: #82C4D2;
   background-size: cover;
 }
 
@@ -18,14 +18,14 @@ nav {
   justify-content: space-around;
   align-items: center;
   min-height: 8vh;
-  background-color: rgba(37, 53, 77, 0.8);
+  background-color: rgba(111,167,180 , 1);
 }
 
 .logo {
-  color: silver;
+  color: black;
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .nav-links {
@@ -37,11 +37,16 @@ nav {
   list-style: none;
 }
 .nav-links a {
-  color: silver;
+  color: black;
   text-decoration: none;
   letter-spacing: 3px;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 17px;
+}
+
+.nav-links a:hover {
+  font-size: 19px;
+  font-weight: bold;
 }
 
 .burger {
@@ -52,7 +57,7 @@ nav {
 .burger div {
   width: 25px;
   height: 3px;
-  background-color: silver;
+  background-color: black;
   margin: 5px;
   transition: all 0.3s ease;
 }
@@ -72,7 +77,7 @@ nav {
     right: 0px;
     height: 92vh;
     top: 8vh;
-    background-color: rgba(37, 53, 77, 0.8);
+    background-color: rgba(111,167,180 , 1);
     display: flex;
     flex-direction: column;
     align-items: center;
